# quadcoil

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  test_cache.ipynb
docs/: conf.py  index.md  index.rst  math.rst  objective.md  objective.rst  quadcoil.io.rst  quadcoil.objective.rst  quadcoil.quantity.rst  quadcoil.rst  quantity.rst  tutorial.md  tutorial_inputs.rst  tutorial_outputs.rst  tutorial_to_desc.rst  tutorial_to_simsopt.rst
examples/: IPM_conversion.ipynb  curvature.ipynb  dipole_density.ipynb  dipole_density_easiest.ipynb  force_test_work_in_progress.ipynb  li383_minimum_example.npy  minimum_regcoil.ipynb  quasi_single_stage.ipynb  regcoil.ipynb  regcoil.npy  simple_example.ipynb  taylor_test.ipynb  thincurr_coil.h5  thincurr_plasma.h5  topology.ipynb  topology_and_cutting.ipynb
examples/.ipynb_checkpoints/: taylor_test-checkpoint.ipynb
examples/coil/: oft_xdmf.0001.h5
examples/plasma/: oft_xdmf.0001.h5
src/quadcoil/: __init__.py  conf.py  math_utils.py  plotting.py  quadcoil.py  quadcoil_bak.py  quadcoil_may_22.py  quadcoil_params.py  quadcoilparams.py  solver.py  solver_static_scale.py  surfacerzfourier_jax.py  surfacerzfourierjax.py  winding_surface.py  windingsurface.py  wrapper.py
src/quadcoil/io/: __init__.py  coil_cutting.py  desc.py  jax.py  (+3 more)
tests/: load_test_data.py  proto_cvxpy_utils.py  proto_f_b_and_k_operators.py  proto_grid_curvature_operator.py  proto_operator_helper.py  regcoil.ipynb  test_B.py  test_K.py  test_KK.py  test_Phi.py  test_data.npy  test_desc.py  test_jvp.py  test_regcoil.py  test_wrapper.py  wout_muse++.nc
(+18 files in other folders)
